--- a/index.css
+++ b/index.css
@@ -117,6 +117,9 @@ button{
 .logout {
     background-color: #e74c3c;
     color: #fff;
+    display: block;
+    margin: 2rem auto; /* Adjust as needed */
+    text-align: center;
 }
 
 .logout:hover {
